# durak_computer_controlled_opponent

./: .gitignore  CMakeLists.txt  CMakePresets.json  ProjectOptions.cmake  compile_commands.json  conanfile.py  conanfile.txt  createDatabaseForModernDurak.cxx  main.cxx  somefile
cmake/: CompilerWarnings.cmake  Hardening.cmake  Sanitizers.cmake
durak_computer_controlled_opponent/: CMakeLists.txt  action.cxx  action.hxx  combination.hxx  compressCard.cxx  compressCard.hxx  database.cxx  database.hxx  guess.cxx  guess.hxx  moveToPlay.hxx  permutation.cxx  permutation.hxx  result.hxx  serialisation.hxx  simulationLookup.cxx  simulationLookup.hxx  solve.cxx  solve.hxx  util.cxx  util.hxx
durak_computer_controlled_opponent/simulation/: CMakeLists.txt  action.cxx  compressCard.cxx  compressCard.hxx  database.cxx  database.hxx  permutation.cxx  serialisation.hxx  solve.cxx  solve.hxx  util.cxx  util.hxx
src/: CMakeLists.txt
src/cuda/: CMakeLists.txt  cuda.cu  cuda.cuh
src/cxx/: CMakeLists.txt  combination.hxx  compressCard.cxx  database.cxx  database.hxx  oldPermutation.cxx  oldPermutation.hxx  permutation.cxx  permutation.hxx  solve.cxx  solve.hxx  treeToVector.hxx  util.cxx  util.hxx
test/: CMakeLists.txt  compressCard.cxx  constant.hxx  database.cxx  gameTree.cxx  guess.cxx  main.cxx  permutation.cxx  simulationLookup.cxx  solve.cxx  test.cxx  treeToVector.cxx  util.cxx
test/simulation/: CMakeLists.txt  compressCard.cxx  database.cxx  gameTree.cxx  main.cxx  permutation.cxx  solve.cxx  util.cxx
